2008-10-15  Henri Häkkinen  <henux@users.sourceforge.net>

	* Added GPL headers to each file.

2008-10-15  Henri Häkkinen  <henux@users.sourceforge.net>

	Initial version.