@@ -1,0 +1,7 @@
+UbuntuMan TODO
+
+Support non-English manual pages.
+
+The current version looks for sections NAME, SYNOPSIS and DESCRIPTION from
+the manual page.  Not all manual pages have these and in these cases the
+plugin just gives an error.
