@@ -1,5 +1,7 @@
 # Copyright (c) 2008 Henri Hakkinen
 #
+# This file is part of the UbuntuMan Supybot IRC plugin.
+#
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
