@@ -22,64 +22,62 @@ import supybot.registry as registry
 import supybot.conf as conf
 import urllib
 
-subsections = {'en': ('NAME', 'SYNOPSIS', 'DESCRIPTION'),
-               'fr': ('NOM', 'SYNOPSIS', 'DESCRIPTION'),
-               'nl': ('NAAM', 'OVERZICHT', 'BESCHRIJVING'),
-               'fi': ('NIMI', 'YLEISKATSAUS', 'KUVAUS'),
-               'sv': ('NAMN', 'SYNOPSIS', 'BESKRIVNING'),
-               #'es': ('NOMBRE', 'SINOPSIS', 'DESCRIPCI   N')
-               }
-
 class UbuntuManError(Exception):
-    """Exception class for UbuntuManParser."""
+    """Ubuntu manual page exception.  Raised when an expected section is
+    not found from the manual page or other parsing related error is
+    encountered."""
     pass
 
 class UbuntuManParser:
-    """Class for parsing the manpage out of the HTML page markup received
-    from the Ubuntu Manpage Repository."""
+    """Ubunutu manual page parser."""
 
-    def __findSectionData(self, html, sect):
-        """Return everything between '<h3>SECTION</h3><pre>' and '</pre>
-        tags.""" 
-        s = html.find('<h3>' + sect + '</h3><pre>')
-        if s == -1:
-            raise UbuntuManError('<h3>' + sect + '</h3><pre> not found')
-        s += len(sect) + 14
-        e = html.find('</pre>', s)
-        if e == -1:
-            raise UbuntuManError('</pre> not found while parsing ' + sect)
-        return html[s:e]
+    def __skipToSection(self, fd, sect):
+        """Skips lines until '<h3>SECTION</h3>' is found and returns the
+        rest of the line as a string with whitespaces normalized and HTML
+        tags removed."""
+        while True:
+            ln = fd.readline()
+            if not ln:
+                raise UbuntuManError('Section ' + sect + ' not found.')
+            tag = '<h3>' + sect + '</h3>'
+            offs = ln.find(tag)
+            if offs == -1:
+                continue
+            ln = ln[offs + len(tag) + 5:]
+            ln = utils.web.htmlToText(ln, tagReplace='')
+            ln = utils.str.normalizeWhitespace(ln)
+            return ln
 
-    def __parseName(self, html, sect):
+    def __parseName(self, fd):
         """Parse the NAME section."""
-        data = self.__findSectionData(html, sect)
-        self.name = utils.str.normalizeWhitespace(data)
+        self.name = self.__skipToSection(fd, 'NAME')
 
-    def __parseSynopsis(self, html, sect):
+    def __parseSynopsis(self, fd):
         """Parse the SYNOPSIS section.  Only the first line is read."""
-        data = self.__findSectionData(html, sect)
-        data = data[:data.find('\n')]
-        data = utils.web.htmlToText(data, tagReplace='')
-        self.synopsis = utils.str.normalizeWhitespace(data)
+        self.synopsis = self.__skipToSection(fd, 'SYNOPSIS')
 
-    def __parseDescription(self, html, sect):
+    def __parseDesc(self, fd):
         """Parse the DESCRIPTION section.  Only the first paragraph is
         read."""
-        data = self.__findSectionData(html, sect)
-        data = data[:html.find('\n\n')]
-        data = utils.web.htmlToText(data, tagReplace='')
-        self.desc = utils.str.normalizeWhitespace(data)
+        self.desc = self.__skipToSection(fd, 'DESCRIPTION')
+        while True:
+            ln = fd.readline()
+            if not ln or ln.startswith(" </pre>") or len(ln) == 0:
+                break
+            if ln.endswith('\xe2\x80\x90\x0a'):
+                self.desc += ln[:len(ln) - 4]
+            else:
+                self.desc += ln.strip() + ' '
+        self.desc = utils.web.htmlToText(self.desc, tagReplace='')
+        self.desc = utils.web.normalizeWhitespace(self.desc)
 
-    def parse(self, html, lang):
-        """Parse the manpage from the HTML markup.  Results are stored into
-        variables 'name', 'synopsis' and 'desc'.  In the case of an error,
-        raises UbuntuManError."""
-        self.name     = ''
-        self.synopsis = ''
-        self.desc     = ''
-        self.__parseName(html, subsections[lang][0])
-        self.__parseSynopsis(html, subsections[lang][1])
-        self.__parseDescription(html, subsections[lang][2])
+    def parse(self, fd):
+        """Parse the HTML manual page from the given file descriptor."""
+        for x in range(43):
+            fd.readline()
+        self.__parseName(fd)
+        self.__parseSynopsis(fd)
+        self.__parseDesc(fd)
 
 class UbuntuMan(callbacks.Plugin):
     """This plugin provides commands for displaying UNIX manual pages from
@@ -91,89 +89,90 @@ class UbuntuMan(callbacks.Plugin):
         self.conf = conf.supybot.plugins.UbuntuMan
         self.parser = UbuntuManParser()
 
-    def __buildUrl(self, release, language, section, command):
-        """Build a manual page URL."""
+    def __buildUrl(self, release, section, command):
+        """Build URL to a manual page."""
         url = self.conf.baseurl.value + '/'
         if release:
             url += urllib.quote_plus(release) + '/'
         else:
             url += urllib.quote_plus(self.conf.release.value) + '/'
-        url += urllib.quote_plus(language) + '/'
-        url += urllib.quote_plus(section) + '/'
+        url += 'man' + urllib.quote_plus(section) + '/'
         url += urllib.quote_plus(command) + '.html'
         return url
 
     def __tryUrl(self, url):
-        """Try to open the given URL. If succeeds, returns it's HTML
-        source; otherwise returns None."""
+        """Try to open the given URL.  If succeeds, returns it's file
+        descriptor; otherwise returns None."""
         try:
-            return utils.web.getUrl(url)
+            return utils.web.getUrlFd(url)
         except utils.web.Error:
             return None
 
-    def __getManPageSource(self, release, language, command):
-        """Get the manual pages HTML source."""
+    def __getManPageFd(self, release, command):
+        """Get a file descriptor to the manual page in the Ubuntu Manpage
+        Repository."""
         for section in self.conf.sections.value:
-            url = self.__buildUrl(release, language, section, command)
-            html = self.__tryUrl(url)
-            if html:
-                return html
+            url = self.__buildUrl(release, section, command)
+            fd = self.__tryUrl(url)
+            if fd:
+                return fd
         return None
 
-    def __formatMessage(self, lang, name, synopsis, desc):
-        msg = self.parser.name \
-            + ' // ' + subsections[lang][1] + ': ' + self.parser.synopsis \
-            + ' // ' + subsections[lang][2] + ': ' + self.parser.desc
+    def __formatReply(self, name, synopsis, desc):
+        """Format the data for the IRC reply."""
+        msg = self.parser.name + ' | ' \
+            + self.parser.synopsis + ' | ' \
+            + self.parser.desc
         msg = msg[:conf.supybot.reply.mores.length.value + 1]
         idx = msg.rfind('.')
         return msg[:idx + 1]
 
-    def man(self, irc, msg, args, command, language, release):
-        """<command> [<language>] [<release>]
+    def man(self, irc, msg, args, command, optlist):
+        """[--rel <release>] <command>
 
-        Displays a UNIX manual page."""
-        if language == None:
-            language = self.conf.language.value
-        elif not language in subsections:
-            irc.reply('Language not supported or recognized')
-            return
+        Displays a manual page from the Ubuntu Manpage Repositor."""
+        release = None
+        for (opt, arg) in optlist:
+            if opt == 'rel':
+                release = arg
         try:
-            html = self.__getManPageSource(release, language, command)
-            if html == None:
+            fd = self.__getManPageFd(release, command)
+            if not fd:
                 irc.reply("No manual page for " + command)
                 return
-            self.parser.parse(html, language)
-            msg = self.__formatMessage(language,
-                                       self.parser.name,
-                                       self.parser.synopsis,
-                                       self.parser.desc)
+            self.parser.parse(fd)
+            del fd
+            msg = self.__formatReply(self.parser.name,
+                                     self.parser.synopsis,
+                                     self.parser.desc)
             irc.reply(msg)
         except UbuntuManError, e:
             irc.reply('Failed to parse the manpage: ' + e.message)
 
-    def manurl(self, irc, msg, args, command, language, release):
-        """command [<language>] [<release>]
+    def manurl(self, irc, msg, args, command, optlist):
+        """[--rel <release>] <command>
 
-        Displays the URL where the 'man' command would fetch the manpage
-        from."""
-        if language == None:
-            language = self.conf.language.value
-        elif not language in subsections:
-            irc.reply('Language not supported or recognized')
-            return
+        Gives the URL to the full manual page in the Ubuntu Manpage
+        Repository."""
+        release = None
+        for (opt, arg) in optlist:
+            if opt == 'rel':
+                release = arg
         for section in self.conf.sections.value:
             try:
-                url = self.__buildUrl(release, language, section, command)
-                fd = utils.web.getUrlFd(url)
-                irc.reply(url)
+                url = self.__buildUrl(release, section, command)
+                fd = self.__tryUrl(url)
+                if fd:
+                    irc.reply(url)
+                    del fd
+                    return
                 del fd
-                return
             except utils.web.Error:
                 pass
         irc.reply("No manual page for " + command)
 
-    man = wrap(man, ['something', optional('something'), optional('something')])
-    manurl = wrap(manurl, ['something', optional('something'), optional('something')])
+    man = wrap(man, ['something', getopts({'rel': 'something'})])
+    manurl = wrap(manurl, ['something', getopts({'rel': 'something'})])
 
 
 Class = UbuntuMan
